# one-brain

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.traefik.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml
apps/web/: index.html  package.json
apps/web/src/: App.tsx  api.ts  styles.css  theme.ts  types.ts
backend/: alembic.ini  manage.py
backend/migrations/: env.py
backend/migrations/versions/: 20260610_0001_initial.py  20260612_0003_pgvector_memory_vectors.py
backend/src/onebrain_api/: apps.py  openapi.py  service_urls.py  views.py
backend/src/onebrain_cli/: local_importer.py
backend/src/onebrain_django/: __init__.py  asgi.py  http.py  urls.py  wsgi.py
backend/src/onebrain_host/: __init__.py  asgi.py  django_asgi.py  health.py  http.py  runtime.py  urls.py  wsgi.py
backend/src/onebrain_infra/: database.py  embeddings.py  vector_store.py
backend/src/onebrain_jobs/: apps.py  graph_aggregation.py  (+3 more)
backend/tests/: test_correlation.py  test_django_api.py  test_django_disconnects.py  test_django_jobs.py  test_django_mcp.py  test_django_runtime.py  test_embeddings.py  test_graph.py  test_ingestion_contextual.py  test_ingestion_plan.py  test_local_importer.py  test_mcp_http_auth.py  test_memory_classification.py  test_memory_importer.py  test_path_mapping.py  test_skills.py  test_text.py  test_vector_store.py
docs/: corpus-lab.md  next-phase-architecture.md
frontend/web/: package.json  vite.config.ts
migrations/: env.py
migrations/versions/: 20260611_0002_memory_links.py
ops/: Dockerfile
ops/scripts/: onebrain-lab-clone-corpus.ps1  onebrain-lab-expand-awesome-skills.ps1  onebrain-lab-reset.ps1
resources/artifacts/: memory-classifier.json
resources/docs/: corpus-lab.md  next-phase-architecture.md
resources/wiki/: Architecture.md  Environment-And-Secrets.md  Graph-And-Correlation.md  Home.md  Knowledge-Harvest-Plugin.md  Operational-Runbooks.md  README.md  Repository-Harvest-Acceptance.md  Services-And-Ports.md  _Sidebar.md
scripts/: onebrain-lab-reset.ps1
src/onebrain/: api.py  config.py  db.py  embeddings.py  graph_ui.py  http_client.py  mcp_server.py  memory_hardening.py  memory_importer.py  models.py  path_mapping.py  runtime.py  schemas.py  service.py  skills.py  text.py  vector_store.py
src/onebrain_api/: openapi.py  service_urls.py  urls.py  views.py
src/onebrain_cli/: local_importer.py
src/onebrain_core/: __init__.py  config.py  db.py  embeddings.py  logging.py  mcp_server.py  memory_hardening.py  memory_importer.py  runtime.py  service.py  skills.py  vector_store.py
src/onebrain_django/: __init__.py  asgi.py  disconnects.py  http.py  manage.py  runtime.py  settings.py  urls.py  views.py  wsgi.py
src/onebrain_host/: asgi.py  disconnects.py  entrypoints.py  manage.py  runtime.py  settings.py  urls.py
src/onebrain_infra/: database.py  embeddings.py  vector_store.py
src/onebrain_jobs/: memory_classification.py  status.py
src/onebrain_mcp/: asgi.py  auth.py  server.py
src/onebrain_ml/: cli.py  memory_classification.py  memory_classification_training.py
src/onebrain_web/: apps.py  console_ui.py  design_system.py  graph_ui.py  service_urls.py  urls.py  views.py
tests/: test_django_api.py  test_django_disconnects.py  test_django_jobs.py  test_django_mcp.py  test_django_runtime.py  test_embeddings.py  test_graph.py  test_http_client.py  test_ingestion_contextual.py  test_ingestion_plan.py  test_local_importer.py  test_mcp_http_auth.py  test_memory_classification.py  test_memory_importer.py  test_path_mapping.py  test_skills.py  test_text.py  test_vector_store.py
(+126 files in other folders)
