[project]
name = "onebrain"
version = "0.1.0"
description = "Production-oriented MCP memory service with PostgreSQL, Qdrant, and deterministic context composition."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "mcp>=1.9.0",
    "orjson>=3.10.0",
    "openai>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "qdrant-client>=1.13.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
semantic = [
    "fastembed>=0.5.0",
]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[project.scripts]
onebrain-api = "onebrain.api:run"
onebrain-mcp = "onebrain.mcp_server:run"
onebrain-mcp-http = "onebrain.mcp_server:run_http"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onebrain"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
