[project]
name = "onebrain"
version = "0.1.0"
description = "Production-oriented MCP memory service with PostgreSQL/pgvector and deterministic context composition."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.0",
    "mcp>=1.9.0",
    "orjson>=3.10.0",
    "openai>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.34.0",
    "django>=5.2.15,<6.0",
    "djangorestframework>=3.17.1",
]

[project.optional-dependencies]
semantic = [
    "fastembed>=0.5.0",
]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-django>=4.12.0",
    "ruff>=0.8.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-django>=4.12.0",
    "ruff>=0.8.0",
]

[project.scripts]
onebrain-host = "onebrain_host.manage:run"
onebrain-django = "onebrain_host.manage:run"
onebrain-api = "onebrain_host.entrypoints:run_api"
onebrain-web = "onebrain_host.entrypoints:run_web"
onebrain-mcp-http = "onebrain_host.entrypoints:run_mcp_http"
onebrain-jobs = "onebrain_host.entrypoints:run_jobs"
onebrain-mcp = "onebrain_mcp.server:run_stdio"
onebrain-local-import = "onebrain_cli.local_importer:main"
onebrain-memory-classifier = "onebrain_ml.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/onebrain_api",
    "src/onebrain_cli",
    "src/onebrain_core",
    "src/onebrain_django",
    "src/onebrain_host",
    "src/onebrain_infra",
    "src/onebrain_jobs",
    "src/onebrain_mcp",
    "src/onebrain_ml",
    "src/onebrain_web",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "onebrain_host.settings"
python_files = ["test_*.py", "*_tests.py"]
